--- a/my-project/.env
+++ b/my-project/.env
@@ -13,7 +13,7 @@ APP_SECRET=56bc6b11c4dc52ea79b9c93eaa8a6682
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://db_user:db_password@127.0.0.1:3306/db_name
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/test
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
