--- a/my-project/config/services.yaml
+++ b/my-project/config/services.yaml
@@ -32,6 +32,16 @@ services:
                     arguments:
                         $imagesDirectory: '%images_directory%'
 
+    App\Service\ProductImagesCollection:
+                        public: true
+                        arguments:
+                            $imagesDirectory: '%images_directory%'
+
+    App\Service\ProductMainImage:
+                        public: true
+                        arguments:
+                            $imagesDirectory: '%images_directory%'
+
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
     App\Controller\:
