--- a/my-project/config/services.yaml
+++ b/my-project/config/services.yaml
@@ -22,7 +22,7 @@ services:
 
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\Service\ImagesCollection:
+    App\Service\ImagesActions:
                 public: true
                 arguments:
                     $imagesDirectory: '%images_directory%'
