--- a/my-project/composer.json
+++ b/my-project/composer.json
@@ -4,6 +4,7 @@
     "require": {
         "php": "^7.1.3",
         "ext-iconv": "*",
+        "friendsofsymfony/rest-bundle": "^2.3",
         "sensio/framework-extra-bundle": "^5.2",
         "symfony/asset": "^4.1",
         "symfony/console": "^4.1",
@@ -17,6 +18,7 @@
         "symfony/orm-pack": "^1.0",
         "symfony/process": "^4.1",
         "symfony/security-bundle": "^4.1",
+        "symfony/serializer": "^4.1",
         "symfony/serializer-pack": "*",
         "symfony/swiftmailer-bundle": "^3.1",
         "symfony/translation": "^4.1",
