--- a/my-project/config/services.yaml
+++ b/my-project/config/services.yaml
@@ -17,15 +17,20 @@ services:
                             # The best practice is to be explicit about your dependencies anyway.
 
     App\:
-        resource: '../src/*'
-        exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
-        
+            resource: '../src/*'
+            exclude: '../src/{DependencyInjection,Entity,Migrations,Tests,Kernel.php}'
+
     # makes classes in src/ available to be used as services
     # this creates a service per class whose id is the fully-qualified class name
-    App\Service\ImagesActions:
+    App\Service\ImagesCollection:
                 public: true
                 arguments:
                     $imagesDirectory: '%images_directory%'
+
+    App\Service\MainImage:
+                    public: true
+                    arguments:
+                        $imagesDirectory: '%images_directory%'
 
     # controllers are imported separately to make sure services can be injected
     # as action arguments even if you don't extend any base controller class
@@ -35,3 +40,4 @@ services:
 
     # add more service definitions when explicit configuration is needed
     # please note that last definitions always *replace* previous ones
+
