--- a/my-project/package.json
+++ b/my-project/package.json
@@ -1,7 +1,6 @@
 {
     "devDependencies": {
-        "@symfony/webpack-encore": "^0.20.1",
-        "webpack-cli": "^3.1.0"
+        "@symfony/webpack-encore": "^0.20.1"
     },
     "license": "UNLICENSED",
     "private": true,
@@ -10,8 +9,5 @@
         "dev": "encore dev",
         "watch": "encore dev --watch",
         "build": "encore production"
-    },
-    "dependencies": {
-        "webpack": "^4.16.5"
     }
 }
